<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.marvin.proyectoandroid.Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btnHorarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="0.24"
            tools:text="@string/text_btnHorarios" />

        <Button
            android:id="@+id/btnLaboratorios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0.22"
            tools:text="@string/text_btnLaboratorios" />

        <Button
            android:id="@+id/btnReglamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="40dp"
            tools:text="@string/text_btnReglamento"
            android:layout_weight="0.16" />
    </LinearLayout>
</LinearLayout>
