<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/natu"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.marvin.proyectoandroid.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/edtCarnet"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/hint_edtCarnet"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtClave"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/hint_edtClave"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="@string/text_btnIngresa" />

    </LinearLayout>
</LinearLayout>
